--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "marked": "^0.3.2",
-    "knex": "^0.5.16",
+    "knex": "^0.5.16"
   },
   "license": "MIT",
   "repository": {
